--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <section id = "loginSection">
-        <!-- <div class="yellowCircleStart"></div>
+        <div class="yellowCircleStart"></div>
 
         <div class="yellowCircleFinish"></div>
 
@@ -20,7 +20,7 @@
 
         <div class="redLine">
             <div class="turn"></div>
-        </div> -->
+        </div>
 
         <div class="orange circle"></div>
 
