--- a/frontend/css/homeStyle.scss
+++ b/frontend/css/homeStyle.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 $dark-color: #121212;
 $second-color: #0D6CE8;
 $success-color: #1EA51D;
@@ -8,7 +10,9 @@ $orange-color: #FF4F00;
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    list-style: none;
+    text-decoration: none;
 }
 
 body {
@@ -16,29 +20,107 @@ body {
 }
 
 .sidebar {
-    float: left;
-    width: 15%;
-    height: 100vh;
-    background-color: #262833;
-    font-size: 35px;
-    font-weight: bold;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    position: fixed;
+    background-color: #042331;
+    transition: all .5s ease;
 }
 
-#menuTitle, .menuItem {
+.sidebar header{
     font-size: 55px;
-    font-weight: bold;
     color: white;
     text-align: center;
+    background-color: #063146;
+    user-select: none;
+    line-height: 70px;
 }
 
-.menuItem{
-    position: relative;
+.sidebar ul a {
     display: block;
-    left: 50%;
-    transform: translateX(-50%);
-    border: none;
-    background-color: transparent;
-    margin-top: 10%;
-    font-size: 35px;
+    height: 100%;
+    width: 100%;
+    line-height: 65px;
+    font-size: 28px;
+    color: white;
+    padding-left: 40px;
+    box-sizing: border-box;
+    border-top: 1px solid rgba($color: white, $alpha: .1);
+    border-bottom: 1px solid black;
+    transition: .4s;
 }
 
+ul li:hover a {
+    padding-left: 50px;
+}
+
+.sidebar ul a i {
+    font-size: 30px;
+    margin-right: 20px;
+}
+
+#check {
+    display: none;
+}
+
+label #btn, label #cancel {
+    position: absolute;
+    cursor: pointer;
+    color: white;
+    background: transparent;
+    border-radius: 3px;
+}
+
+label #btn {
+    left: 40px;
+    top: 25px;
+    font-size: 35px;
+    padding: 6px 12px;
+    transition: all .5s;
+}
+
+label #cancel {
+    z-index: 1;
+    left: -195px;
+    top: 17px;
+    font-size: 30px;
+    color:white;
+    padding: 4px 9px;
+    transition: all .5s ease;
+}
+
+#check:checked ~ .sidebar {
+    left: 0px;
+}
+
+#check:checked ~ label #btn {
+    left: 250px;
+    opacity: 0;
+    pointer-events: none;
+}
+
+#check:checked ~ label #cancel {
+    left: 195px;
+}
+
+section {
+    background: url("../images/loginBg.png") no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    transition: all .4s ease;
+}
+
+#check:checked ~ section {
+    margin-left: 250px;
+}
+
+canvas {
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-40%);
+}
