--- a/frontend/css/indexStyle.css
+++ b/frontend/css/indexStyle.css
@@ -17,6 +17,140 @@ body {
   min-height: 100vh;
 }
 
+.redLine {
+  opacity: 0;
+  height: 100vw;
+  width: 20px;
+  margin-left: 100px;
+  background-color: #D62237;
+  -webkit-box-shadow: #D62237 0px 0px 20px;
+          box-shadow: #D62237 0px 0px 20px;
+  position: relative;
+  -webkit-animation: moveRed 2.5s forwards;
+          animation: moveRed 2.5s forwards;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+
+.turn {
+  height: 20px;
+  width: 0;
+  background-color: #D62237;
+  -webkit-box-shadow: #D62237 0px 0px 20px;
+          box-shadow: #D62237 0px 0px 20px;
+  position: relative;
+  -webkit-animation: makeTurn 5s forwards;
+          animation: makeTurn 5s forwards;
+  -webkit-animation-delay: 6.27s;
+          animation-delay: 6.27s;
+}
+
+.yellowLine {
+  opacity: 0;
+  height: 20px;
+  width: 0;
+  margin-right: 100px;
+  background-color: #FFCD05;
+  -webkit-box-shadow: #FFCD05 0px 0px 20px;
+          box-shadow: #FFCD05 0px 0px 20px;
+  position: absolute;
+  top: 120px;
+  right: 30px;
+  float: right;
+  -webkit-animation: moveYellow 2s forwards;
+          animation: moveYellow 2s forwards;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+.yellowCircleStart, .yellowCircleFinish,
+.redCircleFinish {
+  width: 57px;
+  height: 57px;
+  background-color: #FFCD05;
+  -webkit-box-shadow: #FFCD05 0px 0px 20px;
+          box-shadow: #FFCD05 0px 0px 20px;
+  position: relative;
+  top: 100px;
+  float: right;
+  margin-right: 100px;
+  border-radius: 200px;
+}
+
+.redCircleFinish {
+  background-color: #D62237;
+  -webkit-box-shadow: #D62237 0px 0px 20px;
+          box-shadow: #D62237 0px 0px 20px;
+  left: 50vw;
+  top: 33.5vw;
+}
+
+.yellowCircleFinish {
+  margin-right: 1200px;
+}
+
+@-webkit-keyframes moveRed {
+  from {
+    top: 150vh;
+    opacity: 0;
+  }
+  to {
+    top: 70vh;
+    opacity: 1;
+  }
+}
+
+@keyframes moveRed {
+  from {
+    top: 150vh;
+    opacity: 0;
+  }
+  to {
+    top: 70vh;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes moveYellow {
+  from {
+    width: 0px;
+    opacity: 0;
+  }
+  to {
+    width: 1250px;
+    opacity: 1;
+  }
+}
+
+@keyframes moveYellow {
+  from {
+    width: 0px;
+    opacity: 0;
+  }
+  to {
+    width: 1250px;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes makeTurn {
+  from {
+    width: 0;
+  }
+  to {
+    width: 85vw;
+  }
+}
+
+@keyframes makeTurn {
+  from {
+    width: 0;
+  }
+  to {
+    width: 85vw;
+  }
+}
+
 .loginPane {
   position: absolute;
   top: 40%;
