--- a/frontend/views/play.html
+++ b/frontend/views/play.html
@@ -7,6 +7,7 @@
     <title>Rozgrywka</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/css/play.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
 </head>
 <body>
     <nav id="nav-placeholder"></nav>
@@ -18,7 +19,7 @@
     <main id="kek">
         <div class="play-settings">
             <h1 class="title">Ustawienia gry</h1>
-            <hr width="90%">
+            <hr width="90%" color="#EE2737">
 
             <div class="option">
                 <h2 class="sub-title">Limit czasu:</h2>
