--- a/frontend/css/auth.css
+++ b/frontend/css/auth.css
@@ -15,20 +15,23 @@
 }
 
 body {
+    height: ;
     overflow: hidden;
     /* background: url("/images/Login.png"); */
 }
 
-circle {
+.circle {
     position: absolute;
     background: rgb(238,39,55);
     background: linear-gradient(90deg, rgba(238,39,55,1) 0%, rgba(224,2,20,1) 81%);
     width: 2500px;
     height: 2500px;
     border-bottom-right-radius: 56%;
+    border-bottom-left-radius: 56%;
     right: 48%;
     transform: translateY(-50%);
     z-index: 0;
+    transition: 2s;
 }
 
 .login-panel {
@@ -42,11 +45,11 @@ circle {
     position: relative;
     gap: 20px;
     width: 40%;
-    height: 50vh;;
+    height: 40vh;;
     z-index: 1;
 }
 
-.reg-title, .reg-paragph, #btn-register {
+.reg-title, .reg-paragph, #btn-goRegister, #btn-goLogin {
     color: white;
     align-self: center;
     text-align: center;
@@ -61,7 +64,7 @@ circle {
     font-size: 17px;
 }
 
-#btn-register {
+#btn-goRegister, #btn-goLogin {
     font-size: 16px;
     background: transparent;
     border: none;
@@ -70,9 +73,10 @@ circle {
     width: 150px;
     height: 35px;
     transition: .5s;
+    cursor: pointer;
 }
 
-#btn-register:hover {
+#btn-goRegister:hover, #btn-goLogin:hover {
     transition: .5s;
     width: 250px;
 }
@@ -80,19 +84,20 @@ circle {
 .login-panel {
     display: flex;
     width: 50%;
-    height: 80vh;;
-    justify-content: center;
+    height: 60vh;;
+    justify-content: flex-end;
     flex-direction: column;
     text-align: center;
     gap: 50px;
     margin-right: 30px;
+    
 }
 
 .login-panel h1 {
     letter-spacing: 0.3ch;
 }
 
-#inputbox {
+.inputbox {
     width: 300px;
     font-size: 20px;
     outline: none;
@@ -101,6 +106,7 @@ circle {
     border-bottom: solid 2px var(--hover-color);
     color: var(--hover-color);
     margin-left: 10px;
+    text-align: center;
 }
 
 .inputs p {
@@ -108,13 +114,64 @@ circle {
     font-size: 20px;
 }
 
+#btn-login {
+    font-size: 18px;
+    background: var(--hover-color);
+    border: none;
+    color: white;
+    height: 30px;
+    width: 100px;
+    align-self: center;
+    cursor: pointer;
+}
+
+#btn-login:hover {
+    background: transparent;
+    border: solid 2px var(--hover-color);
+    color: var(--hover-color)
+}
+
+.circle.login {
+    /* left: 48%; */
+    transform: translate(100%,-50%);
+    transition: 2s;
+}
+
+.login-prompt {
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    float: right;
+    gap: 20px;
+    width: 40%;
+    height: 40vh;;
+    z-index: 1;
+}
+
+.register-panel {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 30px;
+    margin-right: 40%;
+}
+
+.register-panel h1 {
+    align-self: center;
+}
+
+.hide {
+    display: none;
+}
+
 /* Small Screens */
 @media only screen and (max-width: 650px) {
-    #btn-register {
+    #btn-goRegister, #btn-goLogin {
         width: 62%;
         transition: 0.5s;
     }
-    #btn-register:hover {
+    #btn-goRegister:hover, #btn-goLogin:hover {
         transition: .5s;
         width: 70%;
     }
