Added board and generated points
Board is at the moment tested and points are static, they're correctly drown on the board

--- a/frontend/views/old/home.html
+++ b/frontend/views/old/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <input type="checkbox" id="check">
+    <!-- <input type="checkbox" id="check">
 
     <label for="check">
         <i class="fas fa-bars" id="btn"></i>
@@ -27,7 +27,7 @@
             <li><a href="#"><i class="fas fa-cog"></i>OPCJE</a></li>
             <li><a href="#"><i class="fas fa-power-off"></i>WYLOGUJ</a></li>
         </ul>
-    </div>
+    </div> -->
 
     <section>
         <canvas id="game">
@@ -36,6 +36,6 @@
     </section>
 
 
-    <script src="../javascript/script.js"></script>
+    <script src="../../javascript/script.js"></script>
 </body>
 </html>
