--- a/frontend/views/test.html
+++ b/frontend/views/test.html
@@ -9,12 +9,16 @@
     <title>Tests</title>
 </head>
 <body style="background: #121212; padding: 0; margin: 0;">
+
+    <div id="debug-mode" style="position: absolute; float: right;">
+        <div id="end" style="color: #FFF;">Start, End</div>
+        <div id="status" style="color: #FFF;">Rect, Offset </div>
+        <div id="gameMapArray" style="color: #FFF;">Array</div>
+        <div id="mouseMoved" style="color: #FFF;">Mouse</div>
+    </div>
+
     <section style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
         <canvas id="game" width="500" height="500" style="border: solid 2px #FFF"></canvas>
-        <div id="end" style="color: #FFF;">Start, End</div>
-        <div id="status" style="color: #FFF;">Rect, Offset, Array </div>
-        <div id="mouseMoved" style="color: #FFF;">Mouse</div>
-        
     </section>
 </body>
 </html>
