Finally finished drawing pipes to the points, added bunch of files
Pipes working as intented thanks to new function drawing by current mouse position. Fixed a bug with multiple pipes from one point - pipes are now cleared correctly. Added a bunch of new files for future work and also changed the names of files

--- a/frontend/views/test.html
+++ b/frontend/views/test.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../javascript/script.js"></script>
+    <script src="../javascript/logic/Game.js"></script>
     <link rel="stylesheet" href="../css/test.css">
     <title>Tests</title>
 </head>
 <body style="background: #121212; padding: 0; margin: 0;">
 
-    <div id="debug-mode" style="position: absolute; float: right; ">
+    <div id="debug-mode" style="position: absolute; float: right; pointer-events:none; user-select: none;" >
         <div id="end" style="color: #FFF;">Start, End</div>
         <div id="status" style="color: #FFF;">Rect, Offset </div>
         <div id="gameMapArray" style="color: #FFF;">Array</div>
         <div id="mouseMoved" style="color: #FFF;">Mouse</div>
+        <div id="bugWithPipes" style="color: #FFF;"></div>
     </div>
 
     <section style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
