Fixed issues with paths, node class, Astar algorithm
Paths to css files has been fixed. Node class has been created to represend a graph. Astar algorithm is started

--- a/frontend/views/solver.html
+++ b/frontend/views/solver.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../javascript/logic/Solver.js"></script>
+    <script src="../javascript/logic/Solver/Astar.js"></script>
+    <script src="../javascript/logic/Solver/Node.js"></script>
+    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
+    <script src="../javascript/logic/Solver/Solver.js"></script>
 </head>
 <body>
     <div id="messageBox"></div>
