--- a/frontend/views/solver.html
+++ b/frontend/views/solver.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../javascript/logic/Solver/Astar.js"></script>
+    <script src="../javascript/logic/Solver/Moves.js"></script>
     <script src="../javascript/logic/Solver/Node.js"></script>
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
     <script src="../javascript/logic/Solver/Solver.js"></script>
 </head>
 <body>
-    <div id="messageBox"></div>
+    <div id="messageBox" style="display:flex; justify-content: center; font-size: 100px; color: gray;">
+        <div id="before"></div>
+        <div id="after"></div>
+    </div>
 </body>
 </html>
