Changed file structure, abandoned Astar (for now), started SAT
Files have been moved for better navigation. Work on Astar is suspended for now, it turned out too complicated (i will come back to it later). Started work on SAT solver

--- a/views/auth.html
+++ b/views/auth.html
@@ -41,6 +41,6 @@
         <button id="btn-login">Zarejestruj</button>
     </div>
 
-    <script src="/javascript/auth.js"></script>
+    <script src="/scripts/animations/auth.js"></script>
 </body>
 </html>
