--- a/views/game.html
+++ b/views/game.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../javascript/logic/Debug.js"></script>
-    <script src="../javascript/logic/Game.js"></script>
+    <script src="../scripts/logic/Debug.js"></script>
+    <script src="../scripts/logic/solver/sat/SAT.js"></script>
+    <script src="../scripts/logic/Game.js"></script>
     <link rel="stylesheet" href="../css/game.css">
     <title>Tests</title>
 </head>
