Added debug tool and wrote function to reduce colors

--- a/views/game.html
+++ b/views/game.html
@@ -26,8 +26,7 @@
             <div id="solveTime">Solved in: </div>
             <div id="solverComplexity">Nodes/Variables/Clausules: </div>
             <div id="reducedToSat">Clauses that have been created:
-                <div id="satLog">
-                </div>
+                <textarea id="satLog" cols="30" rows="10"></textarea>
             </div>
             <div id="completedMap">Solved game map Array:</div>
             <br>
