--- a/css/game.css
+++ b/css/game.css
@@ -38,6 +38,11 @@ div {
     min-height: 40px;
     max-height: 300px;
     overflow: auto;
+    background: transparent;
+    color: white;
+    /* font-style: italic; */
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #debugCheckBox {
