--- a/views/game.html
+++ b/views/game.html
@@ -7,6 +7,9 @@
     <script src="../scripts/logic/Debug.js"></script>
     <script src="../scripts/logic/solver/sat/SAT.js"></script>
     <script src="../scripts/logic/Game.js"></script>
+    <script src="../scripts/logic/solver/sat/SolvedTests.js"></script>
+
+
     <link rel="stylesheet" href="../css/game.css">
     <title>Tests</title>
 </head>
