Changed map style, drawing method, working on pipe render animation
Once again changed the values inside map. Now points are represented by upper case letters (eg. R, G, B), pipes are represented by lower case letters (eg. r, g, b). Drawing from completed map works now correctly (needed for solving algorithms). Working on pipe render animation from mapto look better than just instantly appear

--- a/css/game.css
+++ b/css/game.css
@@ -49,3 +49,21 @@ div {
     margin-left: 15px;
     margin-top: 5px
 }
+
+#solve {
+    background-color: transparent;
+    border: solid 2px orangered;
+    width: 100%;
+    color: orangered;
+    font-weight: bold;
+}
+
+#solve:hover {
+    background-color: orangered;
+    font-weight: bold;
+    font-size: 13px;
+    cursor: pointer;
+    border: solid 2px transparent;
+    color: black;
+}
+
