--- a/views/game.html
+++ b/views/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../scripts/logic/Path.js"></script>
     <script src="../scripts/logic/Debug.js"></script>
-    <script src="../scripts/logic/DrawSolved.js"></script>
     <script src="../scripts/logic/solver/sat/SAT.js"></script>
     <script src="../scripts/logic/Game.js"></script>
     <script src="../scripts/logic/solver/sat/SolvedTests.js"></script>
