Prevented clicking when animation plays, back move
Now when user use a 'solve all' or 'solve one' button, point or points that are drawn are blocked and cannot be clicked (it prevent bug when half pipe is drawn). Back move now works but they're hard coded only for TOP move

--- a/views/game.html
+++ b/views/game.html
@@ -8,6 +8,8 @@
     <!--//! Imports will be moved to js in future  !\\-->
     <!-- ### Utility ### -->
     <script src="../scripts/logic/Utility.js"></script>
+    <!-- ### Generator ### -->
+    <script src="../scripts/logic/generator/MapGenerator.js"></script>
     <!-- ### Path drawing ### -->
     <script src="../scripts/logic/Path.js"></script>
     <!-- ### Debug ### -->
