Fixed the bug with animating pipes, added win condition (WIP)
Pipes are now correctly animated without previous bug where some pipes were drawn faster or wrong. Points are printed into console after certain time to show how much user have points - work in progress

--- a/views/game.html
+++ b/views/game.html
@@ -20,6 +20,8 @@
     <!-- ### Enums ### -->
     <script src="../scripts/logic/enums/Colors.js"></script>
     <script src="../scripts/logic/enums/Positions.js"></script>
+    <!-- ### Win Tests ### -->
+    <script src="../scripts/logic/Win.js"></script>
     <!-- ### Game ### -->
     <script src="../scripts/logic/Game.js"></script>
 
