--- a/views/solver.html
+++ b/views/solver.html
@@ -11,8 +11,8 @@
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
     <script src="../scripts/logic/Solver/Astar/Solver.js"></script>
 </head>
-<body>
-    <div id="messageBox" style="display:flex; justify-content: center; font-size: 100px; color: gray;">
+<body style="background: #121212;">
+    <div id="messageBox" style="display:flex; justify-content: center; font-size: 100px; color: white;">
         <div id="before"></div>
         <div id="after"></div>
     </div>
