--- a/views/game.html
+++ b/views/game.html
@@ -41,6 +41,10 @@
         </div>
         <div class="solver-info">
             <p class="header">Solver informations</p>
+            <!-- <div class="btns">
+                <button id="astar" onclick="astarTest()">Astar</button>
+                <button id="sat" onclick="satTest()">SAT</button>
+            </div> -->
             <button id="solveAll" onclick="solveAll()">SOLVE FULL MAP</button>
             <button id="solveOne" onclick="solveOne()">SOLVE ONE COLOR</button>
             <div id="solveTime">Solved in: </div>
@@ -54,7 +58,7 @@
     </div>
 
     <section style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
-        <canvas id="game" width="800" height="800" style="border: solid 2px #FFF"></canvas>
+        <canvas id="game" width="700" height="700" style="border: solid 2px #FFF"></canvas>
     </section>
 </body>
 </html>
