Minor changes, started Astar again

--- a/views/solver.html
+++ b/views/solver.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="../scripts/logic/Utility.js"></script>
     <script src="../scripts/logic/Solver/Astar/Astar.js"></script>
     <script src="../scripts/logic/Solver/Astar/Moves.js"></script>
     <script src="../scripts/logic/Solver/Astar/Node.js"></script>
