--- a/views/solver.html
+++ b/views/solver.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../scripts/logic/Solver/Astar/Map.js"></script>
+    <script src="../scripts/logic/Global.js"></script>
     <script src="../scripts/logic/Solver/Astar/MapState.js"></script>
+    <script src="../scripts/logic/Solver/Astar/Node.js"></script>
     <script src="../scripts/logic/Utility.js"></script>
     <script src="../scripts/logic/Solver/Astar/Astar.js"></script>
-    <script src="../scripts/logic/Solver/Astar/Node.js"></script>
     <script src="../scripts/logic/Solver/Astar/Moves.js"></script>
-    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
+    <!-- <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script> -->
     <script src="../scripts/logic/Solver/Astar/Solver.js"></script>
 </head>
 <body style="background: #121212;">
