Experimenting with moves
Expanded a bit makeAllMoves function to be able to solve other maps (not only with forced moves) but yet without success, implented map solving with only one active color (i.e only one color is moving at the time, until it's solved OR until the move of the current active color caused other colors to has forced move)

--- a/views/solver.html
+++ b/views/solver.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../scripts/logic/Solver/Astar/Map.js"></script>
+    <script src="../scripts/logic/Debug.js"></script>
     <script src="../scripts/logic/Global.js"></script>
     <script src="../scripts/logic/Solver/Astar/MapState.js"></script>
     <script src="../scripts/logic/Solver/Astar/Node.js"></script>
