--- a/views/solver.html
+++ b/views/solver.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="../libraries/lodash.js"></script>
     <script src="../scripts/logic/Solver/Astar/Map.js"></script>
     <script src="../scripts/logic/Debug.js"></script>
     <script src="../scripts/logic/Global.js"></script>
