--- a/views/solver.html
+++ b/views/solver.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../libraries/lodash.js"></script>
+    <script src="../scripts/logic/solver/astar/NodeOrder.js"></script>
     <script src="../scripts/logic/Solver/Astar/Map.js"></script>
+    <script src="../scripts/logic/solver/astar/Check.js"></script>
     <script src="../scripts/logic/Debug.js"></script>
     <script src="../scripts/logic/Global.js"></script>
     <script src="../scripts/logic/Solver/Astar/MapState.js"></script>
