--- a/views/solver.html
+++ b/views/solver.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../libraries/lodash.js"></script>
-    <script src="../scripts/logic/solver/astar/NodeOrder.js"></script>
-    <script src="../scripts/logic/Solver/Astar/Map.js"></script>
-    <script src="../scripts/logic/solver/astar/Check.js"></script>
-    <script src="../scripts/logic/Debug.js"></script>
     <script src="../scripts/logic/Global.js"></script>
+    <script src="../scripts/Tests.js"></script>
+    <script src="../scripts/logic/Solver/Astar/Moves.js"></script>
+    <script src="../scripts/logic/solver/astar/ComponentLabeling.js"></script>
+    <script src="../scripts/logic/solver/astar/NodeOrder.js"></script>
+    <script src="../scripts/logic/Solver/Astar/GameMap.js"></script>
+    <script src="../scripts/logic/Debug.js"></script>
     <script src="../scripts/logic/Solver/Astar/MapState.js"></script>
+    <script src="../scripts/logic/solver/astar/Check.js"></script>
     <script src="../scripts/logic/Solver/Astar/Node.js"></script>
     <script src="../scripts/logic/Utility.js"></script>
     <script src="../scripts/logic/Solver/Astar/Astar.js"></script>
-    <script src="../scripts/logic/Solver/Astar/Moves.js"></script>
     <!-- <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script> -->
     <script src="../scripts/logic/Solver/Astar/Solver.js"></script>
 </head>
