Experimeting with sockets, fixed gameMap initialization

--- a/client/views/solver.html
+++ b/client/views/solver.html
@@ -9,6 +9,7 @@
     <script src="../scripts/logic/Debug.js"></script>
     <script src="../scripts/logic/Global.js"></script>
     <script src="../scripts/logic/Solver/Astar/GameMap.js"></script>
+    <script src="../scripts/logic/Solver/Astar/Neighbours.js"></script>
     <script src="../scripts/Tests.js"></script>
     <script src="../scripts/logic/Solver/Astar/Moves.js"></script>
     <script src="../scripts/logic/solver/astar/ComponentLabeling.js"></script>
