--- a/client/views/game.html
+++ b/client/views/game.html
@@ -9,14 +9,11 @@
     <!-- ### Utility ### -->
     <script src="../scripts/logic/Utility.js"></script>
     <!-- ### Generator ### -->
-    <script src="../scripts/logic/generator/MapGenerator.js"></script>
+    <!-- <script src="../scripts/logic/generator/MapGenerator.js"></script> -->
     <!-- ### Path drawing ### -->
     <script src="../scripts/logic/Path.js"></script>
     <!-- ### Debug ### -->
     <script src="../scripts/logic/Debug.js"></script>
-    <!-- ### Solver ### -->
-    <script src="../scripts/logic/solver/sat/SAT.js"></script>
-    <script src="../scripts/logic/solver/sat/SolvedTests.js"></script>
     <!-- ### Enums ### -->
     <script src="../scripts/logic/enums/Colors.js"></script>
     <script src="../scripts/logic/enums/Positions.js"></script>
@@ -41,18 +38,11 @@
         </div>
         <div class="solver-info">
             <p class="header">Solver informations</p>
-            <!-- <div class="btns">
-                <button id="astar" onclick="astarTest()">Astar</button>
-                <button id="sat" onclick="satTest()">SAT</button>
-            </div> -->
+            <p >***Buttons don't work at the moment***</p>
             <button id="solveAll" onclick="solveAll()">SOLVE FULL MAP</button>
             <button id="solveOne" onclick="solveOne()">SOLVE ONE COLOR</button>
             <div id="solveTime">Solved in: </div>
-            <div id="solverComplexity">Nodes/Variables/Clausules: </div>
-            <div id="reducedToSat">Clauses that have been created:
-                <textarea id="satLog" cols="30" rows="10"></textarea>
-            </div>
-            <div id="completedMap">Solved game map Array:</div>
+            <div id="solverComplexity">Nodes: </div>
             <br>
         </div>
     </div>
