Converted Game.js to class, client and server update
Game.js file has been converted to class and works as intended. Client can now change the map, hints settings added to lobby, added timer

--- a/client/css/game.css
+++ b/client/css/game.css
@@ -12,7 +12,7 @@ body {
     float: right; 
     /* pointer-events:none;  */
     /* user-select: none; */
-    display: block;
+    display: none;
 }
 
 div {
