--- a/client/css/index.css
+++ b/client/css/index.css
@@ -19,15 +19,22 @@ body {
     height: 100%;
     /* display: none; */
 }
+#lobby-options {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    display: none;
+}
+#game-screen {
+    display: none;
+}
 .buttons-group{
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-#game-screen {
-    display: none;
 }
 #game-map {
     width: 200px;
@@ -39,7 +46,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
-#create-room, #join-room {
+#create-room, #join-room, #hints-btn {
     text-transform: uppercase;
     width: 200px;
     height: 50px;
@@ -59,13 +66,6 @@ body {
     border: white solid 2px;
     color: white;
     background-color: #121212;
-}
-#lobby-options {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    display: none;
 }
 .lobby-group {
     height: 100%;
@@ -119,7 +119,6 @@ body {
     color: white;
     background-color: #121212;
 }
-
 #start-game {
     color: white;
     font-size: 18px;
@@ -128,7 +127,26 @@ body {
     background-image: linear-gradient(90deg, red, blue);
     border: white 1px solid;;
 }
-
 #row-two, #row-three {
     display: none;
+}
+.game-section {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh;
+    width: 100vw;
+}
+.game-info {
+    width: 100vw;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* background-color: red; */
+}
+#time-display {
+  /* height: 100%; */
 }
