--- a/client/css/index.css
+++ b/client/css/index.css
@@ -46,7 +46,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
-#create-room, #join-room, #hints-btn {
+#create-room, #join-room, #hints-btn, #change-btn {
     text-transform: uppercase;
     width: 200px;
     height: 50px;
@@ -147,6 +147,12 @@ body {
     flex-direction: column;
     /* background-color: red; */
 }
-#time-display {
-  /* height: 100%; */
+#start-options {
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+}
+.start-canvas {
+    position: absolute;
 }
