--- a/client/css/index.css
+++ b/client/css/index.css
@@ -156,3 +156,42 @@ body {
 .start-canvas {
     position: absolute;
 }
+.switch {
+    position: relative;
+    width: 60px;
+    height: 34px;
+  }
+  
+#can-touch {
+    opacity: 0;
+}
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #121212;
+    transition: .4s;
+    border-radius: 34px;
+}
+.slider::before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+input:checked + .slider {
+    background-color: gray;
+    transition: .4s;
+}
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
