--- a/client/css/alert.css
+++ b/client/css/alert.css
@@ -93,18 +93,18 @@
     color: #4182bf;
 }
 
-.game-end {
+.end-screen{
     position: fixed;
     top: 0;
     width: 100vw;
     height: 100vh;
-    /* background: red; */
-    /* backdrop-filter: blur(40px); */
+    backdrop-filter: blur(0px);
     pointer-events: none;
     transition: 2s;
 }
-.game-end.move{
+.end-screen.move{
     backdrop-filter: blur(40px);
+    pointer-events: initial;
     transition: 2s;
 }
 #result, #winner-points, #loser-points {
@@ -115,19 +115,24 @@
     text-align: center;
     font-weight: bold;
 }
-.game-info {
+.end-info {
     width: 100%;
     min-width: 1500px;
     height: 100%;
     transition: .2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-.winner-info {
+.winner-info, .loser-info {
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 400px;
     height: 400px;
-    transform: translateX(1000px);
+    transform: translateX(1500px);
     /* background: green; */
     transition: .5s;
 }
@@ -148,27 +153,69 @@
     font-weight: lighter;
     letter-spacing: 10px;
 }
-.loser-info {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 400px;
-    height: 400px;
-    /* transform: translateX(1000px); */
-    /* background: green; */
-    transition: .5s;
-}
-.loser-info.move-middle {
+#loser-info.move-middle {
     transform: translateX(0px);
 }
-.loser-info.move-top {
+#loser-info.move-top {
     transform: translate(500px, -100px);
 }
 .canvas-box {
     display: flex;
     justify-content: center;
 }
-
 /* #winner-maps, #loser-maps {
 } */
+.arrow-btn {
+    margin-right: 15px;
+    margin-left: 15px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+@keyframes leftArrow {
+    0% {
+        margin-right: 15px;
+    }
+    25% {
+        margin-right: 25px;
+        margin-left: 5px;
+    }
+    50% {
+        margin-right: 25px;
+        margin-left: 5px;
+    }
+    100% {
+        margin-right: 15px;
+        margin-left: 15px;
+    }
+}
+
+@keyframes rightArrow {
+    0% {
+        margin-left: 15px;
+    }
+    25% {
+        margin-left: 25px;
+        margin-right: 5px;
+    }
+    50% {
+        margin-left: 25px;
+        margin-right: 5px;
+    }
+    100% {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+.arrow-btn:active.left {
+    animation: leftArrow .25s ease, fade-out 0.25s linear;
+}
+.arrow-btn:active.right {
+    animation: rightArrow .25s ease, fade-out 0.25s linear;
+
+}
+
+
