--- a/client/css/alert.css
+++ b/client/css/alert.css
@@ -89,4 +89,62 @@
 .alertSpan.info{
     color: #4182bf;
 }
+/* Progress bar alert */
+.progress-alert {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 30%;
+    height: 120px;
+    background-color: #121212b9;
+    border: solid 1px white;
+    /* background-color: rgba(0, 0, 0, 0.61); */
+    backdrop-filter: blur(5px);
+    top: -20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .3s ease;
+    z-index: 3;
+}
+.progress-alert.move {
+    top: 20%;
+    transition: .3s ease;
+}
+.bar-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background: blue; */
+    width: 100%;
+    height: 70%;
+    position: relative;
+    z-index: 5;
+}
+.info-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 20%;
+}
+.progress-bar {
+    position: relative;
+    width: 10%;
+    height: 50px;
+    border-radius: 30px;
+    transition: .3s ease;
+    background: lime;
 
+    /* border: solid 1px white; */
+}
+/* .progress-bar::before {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    border-radius: 30px;
+    /* background: linear-gradient(90deg, blue, green);
+    background: green;
+} */
